# CueCode-IDE

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Procfile.harness  README.md  RUNBOOK.md  docker-compose.harness-dev.yml  typos.toml
.cursor/rules/: cuecode-agent-development.mdc  cuecode-ai-maxxing.mdc  cuecode-comms.mdc  cuecode-specs.mdc
.cursor/specs/: 00-README.md
.github/: CODEOWNERS.hold
.github/workflows/: bump_patch_version.yml  bump_zed_version.yml  compliance_check.yml  cuecode-cloud-m0.yml  release_nightly.yml  run_tests.yml
assets/badge/: v0.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  initial.json  vim.json
assets/settings/: default.json  initial_debug_tasks.json  initial_local_debug_tasks.json  initial_local_settings.json  initial_server_settings.json  initial_tasks.json  initial_user_settings.json
assets/themes/: LICENSES
crates/acp_thread/: AGENTS.md
crates/agent/: AGENTS.md  Cargo.toml
crates/agent_servers/: Cargo.toml
crates/agent_skills/: README.md  agent_skills.rs
crates/agent_ui/: AGENTS.md  Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/benchmarks/: Cargo.toml
crates/cli/: README.md
crates/client/: Cargo.toml
crates/codestral/: Cargo.toml
crates/collab/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/copilot_ui/: Cargo.toml
crates/cuecode/: Cargo.toml  build.rs
crates/cuecode_actions/: Cargo.toml
crates/cuecode_chp/: Cargo.toml
crates/cuecode_chp/fixtures/: session_start.json  session_started.json  tool_request_read_file.json  tool_result_ok.json  turn_end.json  turn_start.json
crates/cuecode_chp/src/: cuecode_chp.rs  envelope.rs  error.rs  message_type.rs  messages.rs
crates/cuecode_chp/tests/: fixtures_roundtrip.rs
crates/cuecode_cloud/: Cargo.toml
crates/cuecode_cloud/src/: cuecode_cloud.rs  settings.rs
crates/cuecode_cloud/src/chp/: client.rs
crates/cuecode_cloud/tests/: m0_roundtrip.rs
crates/cuecode_credentials_provider/: Cargo.toml
crates/cuecode_credentials_provider/src/: cuecode_credentials_provider.rs
crates/cuecode_env_vars/: Cargo.toml
crates/cuecode_plans/: Cargo.toml
crates/cuecode_plans/src/: cuecode_plans.rs  manifest.rs  progress.rs  resolve.rs  summary.rs  validate.rs  watch.rs
crates/cuecode_plans/tests/: manifest_tests.rs
crates/cuecode_specs/: Cargo.toml
crates/cuecode_specs/src/: cuecode_specs.rs  document.rs  index.rs  parse.rs  telemetry.rs  watch.rs
crates/cuecode_specs/tests/: spec_index_tests.rs
crates/cuecode_specs/tests/fixtures/specs_tree/.cursor/specs/: 01-alpha.md  03-vision.md
crates/cuecode_specs/tests/fixtures/specs_tree/.cursor/specs/nested/: 02-beta.md
crates/db/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/edit_prediction/: AGENTS.md  Cargo.toml
crates/edit_prediction_cli/: build.rs
crates/edit_prediction_ui/: Cargo.toml
crates/editor/: AGENTS.md  Cargo.toml
crates/etw_tracing/: etw_tracing.rs
crates/eval_cli/: build.rs
crates/explorer_command_injector/: AppxManifest-Nightly.xml  AppxManifest-Preview.xml  AppxManifest.xml
crates/extensions_ui/: Cargo.toml
crates/feedback/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/harness_stub/: Cargo.toml  Dockerfile
crates/harness_stub/src/: engine.rs  harness_stub.rs  main.rs  server.rs
crates/inspector_ui/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language/: AGENTS.md  build.rs
crates/language_models/: Cargo.toml
crates/language_onboarding/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/lsp/: AGENTS.md
crates/markdown_preview/: Cargo.toml
crates/miniprofiler_ui/: Cargo.toml
crates/onboarding/: Cargo.toml
docs/: .rules  AGENTS.md  README.md  book.toml
legal/: privacy-policy.md  subprocessors.md  terms.md  third-party-terms.md
nix/: build.nix
script/: bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  cuecode-local  debug-cli  determine-release-channel  determine-release-channel.ps1  generate-action-metadata  generate-build-phase-docs.py  install-linux  network-idle-audit.sh  qa-agent-ollama.sh  qa-config-isolation.sh  qa-p0.sh  rebrand-check.sh  rebrand-docs-pass-d.py  rebrand-docs-pass-d2.py  rebrand-docs-pass-d3.py  rebrand-progress.sh  run-cuecode-dev  snap-build  sync-roadmap-subphase-checklists.py  verify-macos-document-icon
(+687 files in other folders)
