[package]
name = "cuecode_cloud"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "CueCode cloud harness GPL client (CHP transport)"

[lints]
workspace = true

[lib]
path = "src/cuecode_cloud.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
async-tungstenite = { workspace = true, features = ["tokio", "tokio-rustls-manual-roots"] }
cuecode_chp.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
url.workspace = true

[dev-dependencies]
harness_stub = { workspace = true }
pretty_assertions.workspace = true
