[package]
name = "cuecode_credentials_provider"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/cuecode_credentials_provider.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
credentials_provider.workspace = true
env_var.workspace = true
futures.workspace = true
gpui.workspace = true
paths.workspace = true
release_channel.workspace = true
serde.workspace = true
serde_json.workspace = true
