[package]
name = "cuecode_plans"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "CueCode plan manifest — load, validate, and watch .cuecode/plans/project.yaml"

[lints]
workspace = true

[lib]
path = "src/cuecode_plans.rs"

[[bin]]
name = "cuecode-plan"
path = "src/bin/cuecode_plan.rs"

[features]
test-support = ["fs/test-support", "gpui/test-support"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
settings.workspace = true
walkdir.workspace = true
log.workspace = true

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
tempfile.workspace = true
